init app.py and poetry dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,11 +4,15 @@ version = "0.1.0"
 description = ""
 authors = ["fynnfluegge <fynnfluegge@gmx.de>"]
 readme = "README.md"
-packages = [{include = "reviewbuddy_gpt"}]
+packages = [{ include = "reviewbuddy_gpt" }]
 
 [tool.poetry.dependencies]
 python = "^3.11"
+tiktoken = "^0.4.0"
+yaspin = "^2.3.0"
 
+[tool.poetry.scripts]
+rbuddy = "reviewbuddy_gpt.__main__:main"
 
 [build-system]
 requires = ["poetry-core"]
