--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "gitreview-gpt"
-version = "0.1.4"
+version = "0.1.6"
 description = "CLI tool that reviews your git changes with GPT-3.5 and GPT-4"
 authors = ["fynnfluegge <fynnfluegge@gmx.de>"]
 readme = "README.md"
@@ -10,6 +10,8 @@ packages = [{ include = "gitreview_gpt" }]
 python = "^3.8"
 tiktoken = "^0.4.0"
 yaspin = "^2.3.0"
+tree-sitter-languages = "^1.7.0"
+tree-sitter = "^0.20.1"
 
 [tool.poetry.scripts]
 rgpt = "gitreview_gpt.__main__:main"
